# llm-reliability-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  docker-compose.yml  justfile
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  eval.yml  feature.yml  infra.yml  security.yml
.github/workflows/: api-ci.yml  docker-build.yml  security-scan.yml  web-ci.yml
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/src/llm_reliability/: __init__.py  main.py
apps/api/src/llm_reliability/api/: __init__.py  router.py
apps/api/src/llm_reliability/api/routes/: health.py
apps/api/src/llm_reliability/core/: config.py  errors.py  logging.py
apps/api/tests/: test_errors.py  test_health.py
apps/web/: .gitignore  Dockerfile  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
docs/: architecture.md  deployment.md  evals.md  observability.md  security.md
docs/adr/: 0001-architecture.md  0002-deployment-target.md  0003-evaluation-strategy.md  0004-observability-stack.md
docs/runbooks/: backup-restore.md  cost-spike.md  eval-regression.md  high-latency.md  provider-outage.md  rollback.md
infra/docker/: README.md
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/otel-collector/: otel-collector-config.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
scripts/: smoke-local.sh
(+1 files in other folders)
